# skep

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json
.claude/memory/: project.md
docs/superpowers/plans/: 2026-07-04-fleetd-phase1.md  2026-07-04-fleetd-phase2-plan1-queen-worker-seam.md  2026-07-04-skep-phase1.md  2026-07-04-skep-phase2-plan1-queen-worker-seam.md  2026-07-05-l0-mailbox.md  2026-07-05-skep-phase2-plan2-websocket-transport.md  2026-07-09-l1-agent-memory.md  2026-07-09-l1.1-agent-memory-files.md  2026-07-10-sessions-a1-worker-invocations.md  2026-07-16-l0.2-increment1-env-hygiene-vs-main.md  2026-07-22-sessions-a2-queen-sessions.md  2026-07-24-sessions-a3-usage-limit-park-resume.md
docs/superpowers/specs/: 2026-07-04-agent-fleet-control-plane-design.md  2026-07-04-fleetd-phase2-queen-workers-design.md  2026-07-04-skep-phase2-queen-workers-design.md  2026-07-05-l0-mailbox-design.md  2026-07-05-l0-mcp-shim-spike.md  2026-07-09-l1-memory-substrate-design.md  2026-07-09-l1.1-agent-memory-files-design.md  2026-07-10-sessions-design.md  (+2 more)
src/fleetd/: __init__.py  agent.py  app.py  config.py  db.py  formatting.py  stream.py  supervisor.py  telegram_gw.py  transport.py
src/skep/: __init__.py  agent.py  app.py  auth.py  config.py  db.py  discovery.py  formatting.py  memory.py  stream.py  supervisor.py  telegram_gw.py  transport.py  wire.py  workspace.py  ws_transport.py
tests/: conftest.py  test_agent.py  test_agent_mcp.py  test_agent_memory.py  test_app.py  test_auth.py  test_bookkeeping.py  test_config.py  test_db.py  test_discovery.py  test_formatting.py  test_integration.py  test_memory.py  test_memory_write.py  test_onboarding.py  test_queen_app.py  test_router.py  test_stream.py  test_supervisor.py  test_supervisor_mailbox.py  test_supervisor_memory.py  test_supervisor_resume.py  test_telegram_gw.py  test_telegram_sink.py  test_transport.py  test_transport_mailbox.py  test_wire.py  test_wire_mailbox.py  test_worker_app.py  test_workspace.py  test_ws_mailbox.py  test_ws_transport.py
tests/fixtures/: fake_claude.py
tests/integration/: test_mailbox_e2e.py  test_scrubbed_env.py  test_two_mcp_servers.py
tests/queen/: test_addressing.py  test_ceo_at_least_once.py  test_ceo_delivery.py  test_ceo_inbound.py  test_ceo_retry_sweep.py  test_mailbox_policy.py  test_mailbox_store.py  test_park_sweep.py
tests/worker/: test_mcp_config.py  test_mcp_shim.py  test_memory_shim.py  test_roots.py
(+21 files in other folders)
