[project]
name = "skep"
version = "0.1.0"
description = "Telegram control plane for headless Claude Code agents"
requires-python = ">=3.13"
dependencies = ["aiogram>=3.13"]

[project.scripts]
skep = "skep.app:run"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skep"]
