[project]
name = "skep"
version = "0.1.0"
description = "Telegram control plane for headless Claude Code agents"
requires-python = ">=3.13"
dependencies = ["aiogram>=3.13", "aiohttp>=3.10", "zeroconf>=0.130", "mcp>=1.2"]

[project.scripts]
skep = "skep.app:run"
skep-queen = "skep.queen.app:run"
skepd = "skep.worker.app:run"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "mdns: requires working multicast loopback",
    "integration: requires a real `claude` CLI; opt in with SKEP_RUN_INTEGRATION=1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skep"]

[tool.ty.environment]
python-version = "3.13"
python = "./.venv"
root = ["./src"]

[tool.ty.src]
include = ["src", "tests"]
exclude = ["**/__pycache__", "build", "dist"]
respect-ignore-files = true

[tool.ty.terminal]
error-on-warning = false

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.ruff.format]
